compiler/tests/fail/arm-m4/intrinsic_bfiS.jazz
export
fn bfi(reg u32 x y) -> reg u32 {
    ?{}, y = #BFIS(y, x, 0, 1);
    y = y;
    return y;
}
